--- a/competition.html
+++ b/competition.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styleSheet.css">
   </head>
   <body>
-    <a href="surfing.html" id="header"><center><h1>Surfing</h1></center></a>
+    <a href="index.html" id="header"><center><h1>Surfing</h1></center></a>
 
     <div id="nav">
       <div class="pagelink">
