--- a/competition.html
+++ b/competition.html
@@ -20,7 +20,7 @@
 
     <p>The <a href="https://www.worldsurfleague.com">World Surf League (WSL)</a> is the main governing body for competitive surfing. They organize competitions around the world, including Championship Tour (CT) and Qualifying Series (QS) events. The Championship Tour is the top tier of surfing in the world, consisting of ten or eleven events per year at the best breaks and spots, that ultimately determine the world champion. The QS consists of the surfers competing for a spot on the CT. This year, the WSL became the first American sports league to offer equal prize money for men and women.</p>
 
-    <p>The International Surfing Association (ISA) also organizes surfing events where nation’s teams compete against each other for the world titles.</p>
+    <p>The <a href="https://www.isasurf.org/">International Surfing Association (ISA)</a> also organizes surfing events where nation’s teams compete against each other for the world titles.</p>
 
     <p>Next year, surfing will be an olympic sport for the first time!</p>
 
