--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./surfing.js"></script>
   <head>
   <body>
-<a href="surfing.html" id="header"><center><h1>Surfing</h1></center></a>
+<a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
 <div id="nav">
   <div class="pagelink">
@@ -16,65 +16,13 @@
   <div class="pagelink">
     <a href="surfers.html">Surfers</a>
   </div>
+  <div class="pagelink">
+    <a href="spots.html">Surf Spots</a>
+  </div>
 </div>
 
 <center><img src="./coverimage.webp" alt="Surfing Cover Photo. John John Florence at Pipeline."></center>
 
 <p>Surfing is a sport that is currently gaining popularity. Originally from the islands of Polynesia, it was brought to the rest of the world from Hawai’i. Many of the world’s best surfers still hail from Hawai’i. Surfing is unique in that it is more than a sport, it is a lifestyle and pastime. Some of the best surfers in the world do not even surf in competitions.</p>
 
-
-<h2 class="clear">Best surf spots:</h2>
-
-<p>There are several spots around the world notable for their excellence, whether barrels, big waves, or others.</p>
-
-<section class="clear">
-
-  <img alt="Carissa Moore in the barrel at Honolua Bay" src="./honolua.jpg" height="250" width="325" class="float"><p class="height"><object class="padding"><b>Honolua Bay, Maui, Hawai'i:</b> a pristine pointbreak that breaks from right to left. Site of the final event on the women's CT each year. Located on the West Shore of Maui.</object><p>
-
-</section>
-
-<section class="clear">
-  <img alt="John John Florence getting barreled at Pipeline" src="./pipe.jpg" width="800" height="450.6" class="float">
-  <div>
-    <p><b>Pipeline, Oahu, Hawai'i:</b> widely considered to be the best wave in the world, Pipeline offers consistent, fast-paced, and heavy right-hand and left-hand barrels. While this wave on the North Shore produces some of the best rides each winter season, it is also one of the deadliest waves in the world.</p>
-    <iframe alt="Top waves at Pipeline of the 2018-2019 winter" width="600" height="322" src="https://www.youtube.com/embed/4eJpb7MKd_I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-</section>
-
-<section class="clear">
-  <img alt="A big barrel at Jaws" src="./jaws.jpg" height="266.75" width="400" class="float"><p><b>  Peahi (Jaws), Maui, Hawai'i:</b> Jaws has some of the largest waves in the world.</p>
-
-</section>
-
-
-<section class="clear">
-  <img alt="Michel Bourez gets barreled at Teahupo'o. Photo by Leroy Bellet." src="./teahupoo.webp" width="550" height="375.5" class="float" class="nopadding">
-  <p><b>Teahupo'o, Tahiti, French Polynesia:</b> this is one of the heaviest waves and barrels in the world. Far from the shore, this slab produces some of the largest and most dramatic barrels.</p>
-  <iframe alt="Nathan Florence rides a Teahupo'o tube" class="nopadding" width="550.5" height="300.5" src="https://www.youtube.com/embed/9IPrzmryEfY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
-
-<section class="clear">
-  <img alt="Owen Wright surfs at Cloudbreak" src="./cloudbreak.jpg" height="325" weight="181" class="float"><object height="250"><p class="height" class="padding"><b>  Cloudbreak, Fiji:</b> Cloudbreak is a barreling wave similar to Teahupo'o.</p></object>
-</section>
-
-<section class="clear">
-  <img alt="A view of Snapper Rocks" src="./snappers.jpg" height="152" width="401" class="float">
-  <object class="height"><p><b>Snapper Rocks, Australia:</b> Snapper is a wave that produces long, consistent barrels almost all year round. It is home to the first stop on the Championship Tour</p></object>
-</section>
-
-<section class="clear">
-  <img alt="Bells Beach from the cliffs" src="./bells.jpg" class="float">
-  <p><b>Bells Beach, Australia:</b> located on the Southern tip of Australia, Bells is the home of the longest running surf competition. It offers several amazing waves/breaks and the cliffs surrounding the beach and ocean provide a beautiful amphitheater setting for watching surfing.</p>
-</section>
-
-<section class="clear">
-  <img alt="A surfer rides a beast at Nazaré" src="./nazare.jpg" height="400.5" width="600" class="float">
-  <p><b>Nazaré, Portugal:</b> Nazaré produces the biggest waves in the world. The world records for largest waves ever ridden happened here.</p>
-</section>
-
-<section class="clear">
-  <img alt="Overhead view of Jack Robinson in the barrel at Uluwatu in Bali" src="./ulus.jpg" class="float" width="700.5" height="540">
-  <p><b>Indonesia:</b> Indonesia is home to many world-class tropical waves. It provides beautiful scenery along with pristine small- to medium-sized barrels and performance waves. The majority of Indonesia’s famous breaks, including Keramas and Uluwatu, are located on the island of Bali.</p>
-  <iframe alt="Video of Zeke Lau, Betet Merta, and Seth Moniz surfing in Bali" width="560" height="315" src="https://www.youtube.com/embed/PtNps8FuI6k?start=30" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
-</html>
+<p>Through this website, you can learn more about my interest of surfing. Use the navigation bar above to find new pages and information.</p>
