--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./surfing.js"></script>
   <head>
   <body>
-<a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
+<a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
 <div id="nav">
   <div class="pagelink">
