--- a/competition.html
+++ b/competition.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styleSheet.css">
   </head>
   <body>
-    <a href="index.html" id="header"><center><h1>Surfing</h1></center></a>
+    <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
     <div id="nav">
       <div class="pagelink">
@@ -15,7 +15,10 @@
       <div class="pagelink">
         <a href="surfers.html">Surfers</a>
       </div>
+      <div class="pagelink">
+        <a href="spots.html">Surf Spots</a>
     </div>
+    <br>
     <h2>Competitions:</h2>
 
     <p>The <a href="https://www.worldsurfleague.com">World Surf League (WSL)</a> is the main governing body for competitive surfing. They organize competitions around the world, including Championship Tour (CT) and Qualifying Series (QS) events. The Championship Tour is the top tier of surfing in the world, consisting of ten or eleven events per year at the best breaks and spots, that ultimately determine the world champion. The QS consists of the surfers competing for a spot on the CT. This year, the WSL became the first American sports league to offer equal prize money for men and women.</p>
