--- a/spots.html
+++ b/spots.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
 <body>
-  <a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
+  <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
   <div id="nav">
     <div class="pagelink">
