--- a/surfers.html
+++ b/surfers.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
 <body>
-  <a href="surfing.html" id="header"><center><h1>Surfing</h1></center></a>
+  <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
   <div id="nav">
     <div class="pagelink">
@@ -12,6 +12,9 @@
     </div>
     <div class="pagelink">
       <a href="surfers.html">Surfers</a>
+    </div>
+    <div class="pagelink">
+      <a href="spots.html">Surf Spots</a>
     </div>
   </div>
 
