--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styleSheet.css">
     <script src="./surfing.js"></script>
+    <title>Surfing - Home</title>
   <head>
   <body>
 <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
