--- a/spots.html
+++ b/spots.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="styleSheet.css">
+  <title>Surfing - Spots</title>
 </head>
 <body>
   <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
