--- a/surfers.html
+++ b/surfers.html
@@ -5,7 +5,7 @@
   <title>Surfing - Surfers</title>
 </head>
 <body>
-  <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
+  <a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
   <div id="nav">
     <div class="pagelink">
@@ -30,7 +30,7 @@
       <iframe alt="Video of the Kelly Slater Wave Pool" class="padding" width="560" height="315" src="https://www.youtube.com/embed/EHpsAvpCd-c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </object>
 
-    <object class="height" class="kelly"><p class="padding"><b>Kelly Slater</b> - 11x World Champion, widely considered to be the greatest of all time. He is also the youngest and oldest world champion and a tour veteran, still competing at the age of 47. In his younger years, he pioneered many of the techniques and maneuvers that are now the staples of modern surfing. He has developed one of the world’s best wave pools as part of the Kelly Slater Wave Company.</p>
+    <object class="height" class="kelly"><p class="padding"><b>Kelly Slater</b> - 11x World Champion, widely considered to be the greatest of all time. He is also the youngest and oldest world champion and a tour veteran, still competing at the age of 47. In his younger years, he pioneered many of the techniques and maneuvers that are now the staples of modern surfing. He has developed one of the world’s best wave pools as part of the Kelly Slater Wave Company. In addition, he helped found the sustainable surf clothing company Outerknown and designs surfboards for Firewire. You may also recognize him from his role on <em>Baywatch</em>.</p>
 
     <a href="https://youtu.be/B94BcCoIi4o">Watch his surfing</a></object>
   </section>
@@ -68,4 +68,24 @@
     <p><b>Stephanie Gilmore</b> - 7-time World Champion, tied for the record with fellow Australian Layne Beachley. She is notable for her stylish surfing.
 
   <section>
+
+  <section class="clear">
+    <img src="./kai.webp" alt="Kai Lenny" class="float" height="400" width="600">
+    <object class="right">
+      <h3>Watch Kai Lenny's Big-Wave Surfing</h3>
+      <iframe alt="Kai Lenny Big Wave Surfing" width="560" height="315" src="https://www.youtube.com/embed/UyRkTdewXVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </object>
+    <p><b>Kai Lenny</b> - this Hawaiian is an all-around waterman, specializing in big-wave surfing, stand-up paddleboarding, windsurfing, and hydrofoiling. This year, he placed third on the WSL Big Wave Tour. He is one of the individuals pushing forward the sport of big-wave surfing, experimenting with aerials and other moves typically not performed on large waves.</p>
+  </section>
+  <section class="clear">
+    <object class="float">
+      <img src="./keala.webp" alt="Keala Kenelly with her World Title" width="500" height="300">
+    </object>
+    <object class="right">
+      <h3>Watch Keala Kennelly charge at Teahupo'o</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/lszsSLt1U58?start=16" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>Watch her Inspirational World Title Acceptance Speech</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/bOxVqX51un8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </object>
+    <p><b>Keala Kennelly</b> - Big Wave World Champion Keala Kennelly competed on the WSl CT for ten years for turning her focus onto acting and big-wave surfing. This year, she became the first openly LGBTQ+ World Champion. She has spearheaded the movement for gender equality in the surfing world, fighting for female inclusion in big wave events. It was thanks to her work along with other female big wave surfers that the WSL announced pay parity for men and women athletes. No matter what, Keala always charges and gives her all to her surfing, no matter the risk.</p>
 </body>
