--- a/surfers.html
+++ b/surfers.html
@@ -78,9 +78,7 @@
     <p><b>Kai Lenny</b> - this Hawaiian is an all-around waterman, specializing in big-wave surfing, stand-up paddleboarding, windsurfing, and hydrofoiling. This year, he placed third on the WSL Big Wave Tour. He is one of the individuals pushing forward the sport of big-wave surfing, experimenting with aerials and other moves typically not performed on large waves.</p>
   </section>
   <section class="clear">
-    <object class="float">
-      <img src="./keala.webp" alt="Keala Kenelly with her World Title" width="500" height="300">
-    </object>
+      <img src="./keala.webp" alt="Keala Kenelly with her World Title" class="float" width="500" height="300">
     <object class="right">
       <h3>Watch Keala Kennelly charge at Teahupo'o</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/lszsSLt1U58?start=16" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
