--- a/competition.html
+++ b/competition.html
@@ -148,5 +148,53 @@
       <p> 9. Quicksilver and Roxy Pro France (Hossegor, France); Defending Champions: Julian Wilson (Australia) and Courtney Conlogue (USA)</p>
       <p>10. MEO Rip Curl Pro Portugal (Peniche, Portugal); Defending Champions: Italo Ferreira (Brazil) and Carissa Moore (Hawai'i)</p>
       <p>11. Billabong Pipe Masters (Men's Tour)/Hawaii Pro (Women's Tour) (Pipeline, Oahu, Hawai'i, USA/Honolua Bay, Maui, Hawai'i, USA); Defending Champions: Gabriel Medina (Brazil) and Carissa Moore (Hawai'i)</p>
+      <figure class="tourPic">
+        <img src="goldie.jpg">
+        <figcaption>Quicksilver/Boost Mobile Pro Gold Coast</<figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="bellscomp.jpg">
+        <figcaption>Rip Curl Pro Bells Beach</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="bali.jpg">
+        <figcaption>Corona Bali Protected</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="margs.jpg">
+        <figcaption>Margaret River Pro</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="rio.jpg">
+        <figcaption>Oi Rio Pro</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="jbay.webp">
+        <figcaption>Corona Open J-Bay</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="tahiti.jpg">
+        <figcaption>Tahiti Pro Teachupo'o</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="surfranch.jpg">
+        <figcaption>Freshwater Pro</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="france.jpg">
+        <figcaption>Quicksilver/Roxy Pro France</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="portugal.jpg">
+        <figcaption>Rip Curl Pro Portugal</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="maui.jpg">
+        <figcaption>Hawaii Pro</figcaption>
+      </figure>
+      <figure class="tourPic">
+        <img src="pipemasters.jpg">
+        <figcaption>Billabong Pipe Masters</figcaption>
+      </figure>
     </div>
   </body>
