--- a/spots.html
+++ b/spots.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="styleSheet.css">
-  <title>Surfing - Spots</title>
+  <title>Surfing - Surf Spots</title>
 </head>
 <body>
   <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
@@ -72,7 +72,15 @@
     <img alt="Overhead view of Jack Robinson in the barrel at Uluwatu in Bali" src="./ulus.jpg" class="float" width="700.5" height="540">
     <p><b>Indonesia:</b> Indonesia is home to many world-class tropical waves. It provides beautiful scenery along with pristine small- to medium-sized barrels and performance waves. The majority of Indonesia’s famous breaks, including Keramas and Uluwatu, are located on the island of Bali.</p>
     <iframe alt="Video of Zeke Lau, Betet Merta, and Seth Moniz surfing in Bali" width="560" height="315" src="https://www.youtube.com/embed/PtNps8FuI6k?start=30" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </body>
-  </html>
+  </section>
 
+  <section class="clear">
+    <img alt="Jack Robinson at The Box" src="./box.jpg" class="float">
+    <p><b>West Australia:</b> The entire Western Australian coast is an amazing place for surfing, featuring rugged waves and raw slabs. The town of Margaret River in particular features two world-class breaks, Main Break and the tough slab of the Box. These breaks are the location of the fourth stop on the CT.</p>
+  </section>
+  <section class="clear">
+    <img alt="Surfing at Mavericks" src="./mavs.jpeg" class="float" width="537" height="359">
+    <p><b>Mavericks, Half-Moon Bay, California, USA:</b> Mavericks is one of the premiere big-wave spots in the world, featuring 20+-foot waves during the winter storm season.</p>
+  </section>
 </body>
+</html>
