--- a/spots.html
+++ b/spots.html
@@ -5,7 +5,7 @@
   <title>Surfing - Surf Spots</title>
 </head>
 <body>
-  <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
+  <a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
   <div id="nav">
     <div class="pagelink">
@@ -82,5 +82,15 @@
     <img alt="Surfing at Mavericks" src="./mavs.jpeg" class="float" width="537" height="359">
     <p><b>Mavericks, Half-Moon Bay, California, USA:</b> Mavericks is one of the premiere big-wave spots in the world, featuring 20+-foot waves during the winter storm season.</p>
   </section>
+  <hr class="clear">
+  <h3>My favorite surf spots:</h3>
+  <ul>
+    <li>Pipeline</li>
+    <li>Teahupo'o</li>
+    <li>Cloudbreak</li>
+    <li>Margaret River Main Break</li>
+    <li>Sunset Beach</li>
+    <li>Padang Padang</li>
+  <ul>
 </body>
 </html>
