--- a/competition.html
+++ b/competition.html
@@ -174,7 +174,7 @@
       </figure>
       <figure class="tourPic">
         <img src="tahiti.jpg">
-        <figcaption>Tahiti Pro Teachupo'o</figcaption>
+        <figcaption>Tahiti Pro Teahupo'o</figcaption>
       </figure>
       <figure class="tourPic">
         <img src="surfranch.jpg">
