--- a/surfers.html
+++ b/surfers.html
@@ -5,7 +5,7 @@
   <title>Surfing - Surfers</title>
 </head>
 <body>
-  <a href="surfing.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
+  <a href="index.html" id="header" style="text-decoration:none"><center><h1>Surfing</h1></center></a>
 
   <div id="nav">
     <div class="pagelink">
